[tool.poetry]
name = "Lesst"
version = "0.0"
description = "Lesst — less than Email client"
authors = ["Andrey Karchevsky <karych@karych.ru>"]

[tool.poetry.dependencies]
python = "==3.11.4"
aiogram = "==3.0.0b7"
asyncpg = "==0.27.0"
sqlalchemy = "==2.0.16"
alembic = "==1.11.1"
tzlocal = "==5.0.1"
greenlet = "==2.0.2"
aioimaplib = "==1.0.1"
mail-parser = "==3.15.0"
beautifulsoup4 = "==4.12.2"
cryptography = "==41.0.1"
fluentogram = "==1.1.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"